# strawberry

./: .gitignore  2007_train.txt  CMakeLists.txt  get_dr_txt.py  main.cpp  readme.md  test.py  train.py  train_eager.py  yolo.py  未命名.ipynb
VOCdevkit/VOC2007/: voc2yolo4.py
VOCdevkit/VOC2007/ImageSets/Main/: trainval.txt
intel_realsense_D435i/: Asus.yaml  camera_ros-orbslam2.txt  camera_ros_wrapper.txt  camera_sdk.txt  camera_self_calibration.txt  readme.md
nets/: loss.py
nets/yolo4/: darknet.py  neck.py  yolo4.py
nets/yolo4_bifpn/: neck.ipynb  neck.py  yolo4.ipynb  yolo4.py
nets/yolo4_bifpn/.ipynb_checkpoints/: neck-checkpoint.ipynb  yolo4-checkpoint.ipynb
nets/yolo4_tiny/: yolo4_tiny.py
